# DesignPatterns

AbstractFactoryMode/: AbstractFactory.cpp  AbstractFactory.h  AbstractItem.h  AbstractLink.h  AbstractPage.cpp  AbstractPage.h  AbstractTray.cpp  AbstractTray.h  CMakeLists.txt  ListFactory.cpp  ListFactory.h  ListLink.cpp  ListLink.h  ListPage.cpp  ListPage.h  ListTray.cpp  ListTray.h  README.md  main.cpp
AbstractFactoryMode/lib/: CMakeLists.txt  hello.cpp
AdapterMode/: Banner.cpp  Banner.h  CMakeLists.txt  Print.h  PrintBanner.cpp  PrintBanner.h  PrintBannerObject.cpp  PrintBannerObject.h  main.cpp
BridgeMode/: CMakeLists.txt  Display.cpp  Display.h  DisplayImpl.h  MultiDisplay.cpp  MultiDisplay.h  StringDisplayImpl.cpp  StringDisplayImpl.h  main.cpp
BuilderMode/: Builder.h  CMakeLists.txt  Director.cpp  Director.h  HTMLBuilder.cpp  HTMLBuilder.h  TextBuilder.cpp  TextBuilder.h  main.cpp
ChainOfResponsibility/: CMakeLists.txt  LimitSupport.cpp  LimitSupport.h  NoSupport.cpp  NoSupport.h  OddSupport.cpp  OddSupport.h  Problem.cpp  Problem.h  Support.cpp  Support.h  main.cpp
CommandMode/: CMakeLists.txt  Command.h  ComplexCommand.cpp  ComplexCommand.h  Invoker.cpp  Invoker.h  Receiver.cpp  Receiver.h  SimpleCommand.cpp  SimpleCommand.h  main.cpp
CompositeMode/: CMakeLists.txt  Directory.cpp  Directory.h  Entry.cpp  Entry.h  (+3 more)
TemplateMethodMode/: AbstractDisplay.cpp  AbstractDisplay.h  CMakeLists.txt  CharDisplay.cpp  CharDisplay.h  StringDisplay.cpp  StringDisplay.h  helloworld.out  main.cpp
TemplateMethodMode/helloworld.out.dSYM/Contents/Resources/DWARF/: helloworld.out
(+136 files in other folders)
